- schema.org things, again - fixing google disagreements on what is needed in a hatom/hentry - adding a bit of invisible contact information in json-ld to see if anything picks it up - fixing border issue in menu css

--- a/templates/style.css
+++ b/templates/style.css
@@ -30,7 +30,7 @@ svg {
 a {
   color: #5193D4;
   text-decoration: none;
-  border: 1px solid transparent;
+  border-bottom: 1px solid transparent;
 }
 
 a:hover {
@@ -327,4 +327,4 @@ body > footer > ul >li > a > span {
   body > header a svg {
     display: inline-block;
   }
-}
+}    
